--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,7 +4,7 @@ h1 { font-size: 46px; }
 h2 { font-size: 32px; }
 h3 { font-size: 23px; color: #4c4646;}
 
-p {
+p, label, input, a {
 	font-family: 'Nunito', Sans-Serif;
 	font-size: 16px;
 }
