--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,7 @@
+body {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 
 h1, h2, h3 { font-family: 'Libre Baskerville', Serif; }
 h1 { font-size: 46px; }
